criando forms de adicionar categorias painel adm

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,2 +1,4 @@
 {{>_navbarADM}}
-<div class="center"><button class="btn btn-success">teste</button></div>
+<div class="container">
+    <div class="text-center"><button class="btn btn-success">teste</button></div>
+</div>
