adição post categorias

--- a/views/admin/addcategoria.handlebars
+++ b/views/admin/addcategoria.handlebars
@@ -2,7 +2,7 @@
 <div class="container">
     <h2 class="text-center">Adicionar categoria:</h2>
     <div class="card" style="padding: 20px;">
-        <form action="/admin/categorias/new">
+        <form action="/admin/categorias/new" method="POST">
         <label for="Name">Categoria</label>
         <input type="text" name="Name" class="form-control">
         <label for="Slug">Slug</label>
