--- a/views/admin/addcategoria.handlebars
+++ b/views/admin/addcategoria.handlebars
@@ -2,6 +2,12 @@
 <div class="container">
     <h2 class="text-center">Adicionar categoria:</h2>
     <div class="card" style="padding: 20px;">
+        {{#each erros}}
+.       <div class="alert alert-danger" role="alert">
+            {{texto}}
+        </div>
+    {{else}}
+    {{/each}}
         <form action="/admin/categorias/new" method="POST">
         <label for="Name">Categoria</label>
         <input type="text" name="Name" class="form-control">
