adição jquery e listando cat

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,4 +1,5 @@
 {{>_navbarADM}}
 <div class="container">
+    {{>_msg}}
     <div class="text-center"><button class="btn btn-success">teste</button></div>
 </div>
