--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,5 +1,5 @@
 {{>_navbarADM}}
 <div class="container">
     {{>_msg}}
-    <div class="text-center"><button class="btn btn-success">teste</button></div>
+<div class="text-center"><a href="/admin/categorias"><button class="btn btn-success">teste</button></a></div>
 </div>
