--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogapp</title>
+    <title>Ctrl+c Diarium</title>
+    <link rel="icon" href="/img/ctrl.png">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <!-- Include DataTables CSS -->
