--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -1,6 +1,7 @@
-{{#if sucess_msg}}
-<div class="alert alert-sucess">{{sucess_msg}}</div>
+ {{#if success_msg}}
+  <div class="alert alert-success">{{success_msg}}</div>
 {{/if}}
-{{#if erro_msg}}
-<div class="alert alert-danger">{{erro_msg}}</div>
+
+{{#if error_msg}}
+  <div class="alert alert-danger">{{error_msg}}</div>
 {{/if}}
