Salvando postagens com validação

--- a/views/admin/addcategoria.handlebars
+++ b/views/admin/addcategoria.handlebars
@@ -3,7 +3,7 @@
     <h2 class="text-center">Adicionar categoria:</h2>
     <div class="card" style="padding: 20px;">
         {{#each erros}}
-.       <div class="alert alert-danger" role="alert">
+       <div class="alert alert-danger" role="alert">
             {{texto}}
         </div>
     {{else}}
