--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,11 @@
     <title>Ctrl+c Diarium</title>
     <link rel="icon" href="/img/ctrl.png">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <!-- Adicione este script no head para incluir o Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     <!-- Include DataTables CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
