criando pagina de posts por categorias e exibindo posts individualmente

--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -26,7 +26,7 @@
                             <p>{{descricao}}</p>
                             <hr>
                             <h4>Conteúdo:</h4>
-                            <p>{{conteudo}}</p>
+                            <div style="white-space: pre-wrap"><p>{{conteudo}}</p></div>
                             <hr>
                             <p><h4>Categoria:</h4><b>{{categoria.nome}}</b></p>
                             <hr>
