adição model usuário

--- a/views/categorias/postC.handlebars
+++ b/views/categorias/postC.handlebars
@@ -15,7 +15,7 @@
                 </div>
                 <hr>
                 <h4>Conteúdo:</h4>
-                <p>{{postagem.conteudo}}</p>
+                <p style="white-space: pre-wrap">{{postagem.conteudo}}</p>
             </div>
         </div>
     </div>
