--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
           </div>
           <hr>
           <h4>Conteúdo:</h4>
-          <a href="">Ler conteúdo</a>
+          <a href="/categorias/postCompleto/{{_id}}">Ler conteúdo</a>
           <hr>
           <p><h4>Categoria:</h4><strong>{{categoria.nome}}</strong></p>
         </div>
