formulário login completo

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
                 <div id="results-container">
                   <!-- Aqui serão exibidos os resultados da pesquisa -->
                 </div>
-                <a href="#">Faça login</a>
+                <a href="/usuarios/login">Faça login</a>
             </div>
         </div>
     </div>
