--- a/views/usuario/login.handlebars
+++ b/views/usuario/login.handlebars
@@ -1,6 +1,27 @@
+{{>_navbarADM}}
+
 <div class="container">
-    <div class="display-4">Informe seus dados de login:</div>
-    <div class="card">
-        <label for="email">Email:</label>
+    <div class="text-center" style="margin:0px 0px 25px">
+        <div class="display-6">Faça login:</div>
     </div>
+    <div class="card" style="padding: 20px;">
+        {{>_msg}}
+        {{#each erros}}
+         <div class="alert alert-danger" role="alert">
+            {{texto}}
+        </div>
+    {{else}}
+    {{/each}}
+            <form action="post">
+                <label for="email">Email:</label>
+                    <input type="email" name="email" class="form-control" required>
+                <label for="senha">Senha:</label>
+                    <input type="password" name="senha" class="form-control" required>
+                <br>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-success mb-4">Login</button><br>
+                    <a href="/usuarios/registro">Cadastre-se</a>
+                </div>
+            </form>
+        </div>
 </div>
