adição campo dos comentarios, sem backend(temporário)

--- a/views/categorias/postC.handlebars
+++ b/views/categorias/postC.handlebars
@@ -16,6 +16,22 @@
                 <hr>
                 <h4>Conteúdo:</h4>
                 <p style="white-space: pre-wrap">{{postagem.conteudo}}</p>
+                <hr>
+                <h2><strong>Comentários:</strong></h2>
+                <div class="card" style="padding:10px; margin:10px 0 10px">
+                    <b>Username</b>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit mollitia ut est sunt. Itaque aspernatur laudantium pariatur nulla hic, deserunt earum minima tempore facilis quisquam placeat commodi, in nobis dolor.</p>
+                    <div style="text-align:right">
+                        <img src="/img/heart.png" style="width:20px">
+                    </div>
+                </div>
+                <div class="card" style="padding:10px; margin:10px 0 10px">
+                    <b>Username</b>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit mollitia ut est sunt. Itaque aspernatur laudantium pariatur nulla hic, deserunt earum minima tempore facilis quisquam placeat commodi, in nobis dolor.</p>
+                    <div style="text-align:right">
+                        <img src="/img/heart.png" style="width:20px;">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
