--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,13 +27,13 @@
             </div>
         </div>
     </div>
-    <hr>
-    <h1 class style="font-size: xxx-large;">
+    <hr class="animate__animated animate__zoomIn">
+    <h1 class="animate__animated animate__zoomIn" style="font-size: xxx-large;">
         Posts recentes:
     </h1>
-    <div class="card-columns">
+    <div class="card-columns animate__animated animate__fadeIn">
     {{#each postagens}}
-      <div class="card" style="margin: 10px 0 50px;">
+      <div class="card animate__animated animate__zoomIn" style="margin: 10px 0 50px;">
         <div class="card-body">
           <h5 class="card-title">{{titulo}}</h5>
           <p class="card-text">{{descricao}}</p>
