--- a/views/usuario/login.handlebars
+++ b/views/usuario/login.handlebars
@@ -5,8 +5,12 @@
         <div class="display-6">Faça login:</div>
     </div>
     <div class="card" style="padding: 20px;">
-        {{>_msg}}
-            <form action="post">
+        {{#if error}}
+            <div class="alert alert-danger">{{error}}</div>
+        {{else}}
+
+        {{/if}}
+            <form action="/usuarios/log" method="post">
                 <label for="email">Email:</label>
                     <input type="email" name="email" class="form-control" required>
                 <label for="senha">Senha:</label>
