--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,5 +1,7 @@
 {{>_navbarADM}}
 <div class="container">
     {{>_msg}}
-<div class="text-center"><a href="/admin/categorias"><button class="btn btn-success">teste</button></a></div>
+<div class="text-center"><a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a></div>
+<div class="text-center"><a href="/admin/posts"><button class="btn btn-success">Postagens</button></a></div>
+
 </div>
