--- a/views/partials/_navbarADM.handlebars
+++ b/views/partials/_navbarADM.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" style="margin-bottom:10vh;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom:10vh;">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Ctrl+c Diarium</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,16 +7,17 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="/categorias">Categorias</a>
         </li>
+        {{#if user}}
+        <li class="nav-item">
+          <a class="nav-link" href="/usuarios/logout">Logout</a>
+        </li>
+        {{else}}
         <li class="nav-item">
           <a class="nav-link" href="/usuarios/login">Login</a>
         </li>
-        <li class="nav-item dropdown"> 
-        </li>
+        {{/if}}
       </ul>
     </div>
   </div>
