--- a/views/categorias/postC.handlebars
+++ b/views/categorias/postC.handlebars
@@ -18,21 +18,42 @@
                 <p style="white-space: pre-wrap">{{postagem.conteudo}}</p>
                 <hr>
                 <h2><strong>Comentários:</strong></h2>
-                <div class="card" style="padding:10px; margin:10px 0 10px">
-                    <b>Username</b>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit mollitia ut est sunt. Itaque aspernatur laudantium pariatur nulla hic, deserunt earum minima tempore facilis quisquam placeat commodi, in nobis dolor.</p>
-                    <div style="text-align:right">
-                        <img src="/img/heart.png" style="width:20px">
-                    </div>
+                {{#if user}}
+                <div class="card" style="padding:25px; margin:10px 0 10px">
+                    <form action="/usuarios/comment" method="post">
+                    <input type="hidden" value="{{postagem._id}}" name="idPost">
+                    <input type="hidden" id="urlInput" name="urlInput">
+                    <input type="hidden" name="id" value="{{user._id}}"></input>
+                    <textarea placeholder="Adicione um comentário" style="height:150px; width:100%; padding:10px;" name="cont"></textarea>
+                        <div style="text-align:right; margin: 15px 0 10px">
+                            <button type="submit" class="btn btn-success">Comentar</button>
+                        </div>
+                    </form>
+                    
+
                 </div>
-                <div class="card" style="padding:10px; margin:10px 0 10px">
-                    <b>Username</b>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit mollitia ut est sunt. Itaque aspernatur laudantium pariatur nulla hic, deserunt earum minima tempore facilis quisquam placeat commodi, in nobis dolor.</p>
-                    <div style="text-align:right">
-                        <img src="/img/heart.png" style="width:20px;">
+                {{else}}
+                {{/if}}
+                
+                {{#each comentarios}}
+                <hr>
+                    <div class="card" style="padding:10px; margin:10px 0 10px">
+                        <b>{{this.user.nome}}</b>
+                        <p>{{this.conteudo}}</p>
+                        <div style="text-align:right">
+                            <img src="/img/heart.png" style="width:20px">
+                        </div>
                     </div>
-                </div>
+                    
+                {{else}}
+                <hr>
+                    <b>Não há comentarios publicados!</b>
+                {{/each}}
             </div>
         </div>
     </div>
 </div>
+<script>
+    // JavaScript para definir o valor do input como a URL atual
+    document.getElementById('urlInput').value = window.location.href;
+</script>
