remove jquery please...

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 
     <link rel="icon" href="/img/ctrl.png">
+    {{!-- TIRA ISSO DAQUI --}}
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    {{!-- NO JQUERY ALLOWED. ALERTA NO JQUERY ALLOWED --}}
+    {{!-- Um dia jquery foi uma ferramenta bem utilizada no mercado e tal. Todavia. Hoje o JS puro já faz tudo que o jquery fazia e fica mais fácil de fazer algo bacana sem ele. Todo mundo tá tirando o support pra jquery também. É interessante saber mexer com. Mas só de ver isso já me dá um gatilho firme.--}}
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
