começando pagina de adm

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,7 +1,22 @@
 {{>_navbarADM}}
 <div class="container">
-    {{>_msg}}
-<div class="text-center"><a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a></div>
-<div class="text-center"><a href="/admin/posts"><button class="btn btn-success">Postagens</button></a></div>
+    <div class="card animate__animated animate__fadeIn" style="padding:50px;">
+      {{>_msg}}
+        <div class="jumbotron animate__animated animate__zoomIn">
+            <div class="container">
+                <div style="margin: 15px auto 25px">
+                    <h1 class="display-4">Seja bem-vindo ao Ctrl+C Diarium!</h1>
+
+                </div>
+                <p class="lead">Você está na página de Administrador!</p>
+                <hr class="my-4">
+                <p>Neste espaço, você terá a capacidade de monitorar e gerenciar comentários, removendo-os conforme necessário. Além disso, poderá publicar postagens e cadastrar novas categorias. Fique tranquilo, os comentários que foram reportados estarão listados abaixo para sua análise, permitindo que você os remova conforme sua preferência.</p>
+            </div>
+        </div>
+    </div>
+    <hr class="animate__animated animate__zoomIn">
+    <h1 class="animate__animated animate__zoomIn display-4" style="font-size: xxx-large;">
+        Comentários reportados:
+    </h1>
 
 </div>
