--- a/views/partials/_navbarADM.handlebars
+++ b/views/partials/_navbarADM.handlebars
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom:10vh;">
   <div class="container-fluid">
+    {{#if adm}}
+    <a class="navbar-brand" href="/admin/">Ctrl+c Diarium</a>
+    {{else}}
     <a class="navbar-brand" href="/">Ctrl+c Diarium</a>
+    {{/if}}
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,6 +13,9 @@
         {{#if adm}}
         <li class="nav-item">
           <a class="nav-link" href="/admin/categorias">Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/posts">Postagens</a>
         </li>
         {{else}}
         <li class="nav-item">
