funcionalidade excluir comentário adm feita

--- a/views/categorias/index.handlebars
+++ b/views/categorias/index.handlebars
@@ -1,23 +1,25 @@
 {{>_navbarADM}}
+
 <div class="container text-center">
     <div class="card" style="padding:10px">
-    {{>_msg}}
-    <table id="myTable" class="display">
-    <thead>
-        <tr>
-            <th>Nome</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each categorias}}
-            <tr>
-                <td><a href="/categorias/posts/{{slug}}">{{nome}}</a></td>
-            </tr>
-        {{else}}
-        {{/each}}
-    </tbody>
-</table>
+        {{>_msg}}
+        <div class="table-responsive">
+            <table class="table table-striped" id="myTable">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each categorias}}
+                        <tr>
+                            <td><a href="/categorias/posts/{{slug}}">{{nome}}</a></td>
+                        </tr>
+                    {{else}}
+                        <tr>Não há categorias registradas</tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
-
 </div>
-    
