--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,7 +41,7 @@
           <h5 class="card-title">{{titulo}}</h5>
           <p class="card-text">{{descricao}}</p>
           <div class="text-center">
-            <h5>{{slug}}</h5>
+            <h6>{{slug}}</h6>
           </div>
           <hr>
           <h4>Conteúdo:</h4>
@@ -54,7 +54,7 @@
       <h5>Nenhuma postagem</h5>
     {{/each}}
     <div class="text-center" style="margin: 10px 0 25px;">
-      <a href="">Todas as postagens</a>
+      <a href="/categorias/posts">Todas as postagens</a>
     </div>
   </div>
 
