--- a/views/categorias/postagens.handlebars
+++ b/views/categorias/postagens.handlebars
@@ -4,17 +4,16 @@
 {{>_msg}}
 
     <div class="card-columns">
-        <h1>{{categoria.nome}}</h1>
-<h3 class style="font-size: xx-large;">
-        Posts:
-    </h3>
+        <h3 class="display-6"><b>{{categoria.nome}}</b></h3>
+        <hr>
+    <h6 class="display-6">Posts:</h6>
     {{#each postagens}}
       <div class="card" style="margin: 10px 0 50px;">
         <div class="card-body">
           <h5 class="card-title">{{titulo}}</h5>
           <p class="card-text">{{descricao}}</p>
           <div class="text-center">
-            <h2><strong>{{slug}}</strong></h2>
+            <h6>{{slug}}</h6>
           </div>
           <hr>
           <h4>Conteúdo:</h4>
