--- a/views/partials/_navbarADM.handlebars
+++ b/views/partials/_navbarADM.handlebars
@@ -17,15 +17,20 @@
         <li class="nav-item">
           <a class="nav-link" href="/admin/posts">Postagens</a>
         </li>
-        {{else}}
-        <li class="nav-item">
-          <a class="nav-link" href="/categorias">Categorias</a>
-        </li>
-        {{/if}}
-        {{#if user}}
         <li class="nav-item">
           <a class="nav-link" href="/usuarios/logout">Logout</a>
         </li>
+        {{else}}
+        {{#if user}}
+        <li class="nav-item">
+          <a class="nav-link" href="/categorias">Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/usuarios/logout">Logout</a>
+        </li>
+        {{/if}}
+        {{/if}}
+        {{#if user}}
         {{else}}
         <li class="nav-item">
           <a class="nav-link" href="/usuarios/login">Login</a>
