--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -34,8 +34,9 @@
                                 <a href="/admin/posts/edit/{{_id}}"><button class="btn btn-success">Editar</button></a>
                                 <a href="/admin/posts/remove/{{_id}}"><button class="btn btn-danger">Apagar</button></a>
                             </div>
-
-                            
+                            <div class="text-center" style="margin: 15px auto">
+                                <a href="/categorias/postCompleto/{{_id}}">Ver postagem na página de usuário</a>
+                            </div>
                         </div>
                     </div>
                 </div>
