adição pag recuperação de senha, vamos ao backend :)

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -21,6 +21,7 @@
     {{#each reportado}}
     <hr class="animate__animated animate__zoomIn">
     <div class="card nimate__animated animate__zoomIn" style="padding:25px; margin:10px 0 10px">
+        <p style="color:rgb(175, 0, 0)">Reportado {{this.NumerosReports}} vezes</p>
         <b>{{this.UserReport.nome}}</b>
         <p>{{this.Comentario.conteudo}}</p>
         <div style="text-align:left; margin:15px 0 10px">
