--- a/views/usuario/login.handlebars
+++ b/views/usuario/login.handlebars
@@ -14,7 +14,7 @@
                 <br>
                 <div class="text-center">
                     <button type="submit" class="btn btn-success mb-4">Login</button><br>
-                    <a href="/usuarios/recuperacao">Esqueceu sua senha?</a>
+                    <a href="/usuarios/recuperacao">Esqueceu sua senha?</a><br>
                     <a href="/usuarios/registro">Cadastre-se</a>
                 </div>
             </form>
