--- a/views/usuario/recSenha.handlebars
+++ b/views/usuario/recSenha.handlebars
@@ -5,9 +5,9 @@
     {{>_msg}}
 
     <div class="text-center">
-        <h1 class="display-6">Esqueceu sua senha?</h1>
+        <h1 class="display-6 fw-normal">Esqueceu sua senha?</h1>
         <div class="card" style="padding:15px; width:50%; margin: 0 auto;">
-            <form method="post" action="/usuarios/rec/" style="padding:30px;">
+            <form method="post" action="/usuarios/esquecisenha/" style="padding:30px;">
             <input type="email" placeholder="Digite seu email" class="form-control"  name="email"><br>
             <button class="btn btn-success" type="submit" style="width:60%">Recuperar</button>
             </form>
