--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -22,7 +22,8 @@
     <hr class="animate__animated animate__zoomIn">
     <div class="card nimate__animated animate__zoomIn" style="padding:25px; margin:10px 0 10px">
         <p style="color:rgb(175, 0, 0)">Reportado {{this.NumerosReports}} vezes</p>
-        <b>{{this.UserReport.nome}}</b>
+        <b>Reportado por:</b><p>{{this.UserReport.nome}}</p>
+        <hr>
         <p>{{this.Comentario.conteudo}}</p>
         <div style="text-align:left; margin:15px 0 10px">
             <form action="/admin/delCommentIndex/{{this._id}}" method="post">
