--- a/resources/mail/forgot.handlebars
+++ b/resources/mail/forgot.handlebars
@@ -1,3 +1,20 @@
-<h3>Esqueceu sua senha?</h3><hr>
-<p>Cole esse token para recuperar sua senha no nosso site:</p><br>
-<p><b>{{token}}</b></p>
+<table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+    <tr>
+        <td align="center" bgcolor="#ffffff" style="padding: 40px 0 30px 0;">
+            <img src="/img/ctrl.png" width="150" style="display: block;">
+        </td>
+    </tr>
+    <tr>
+        <td align="center" bgcolor="#ffffff" style="padding: 20px;">
+            <h3 style="margin: 0;">Esqueceu sua senha?</h3>
+            <hr style="border-top: 1px solid #dddddd; margin: 20px 0;">
+            <p style="margin: 0;">Cole esse token para recuperar sua senha no nosso site:</p>
+            <p style="margin: 10px 0;"><b>{{token}}</b></p>
+        </td>
+    </tr>
+    <tr>
+        <td align="center" bgcolor="#f4f4f4" style="padding: 20px;">
+            <p style="margin: 0;">Este é um e-mail automático, por favor, não responda.</p>
+        </td>
+    </tr>
+</table>
