--- a/views/usuario/novasenha.handlebars
+++ b/views/usuario/novasenha.handlebars
@@ -22,7 +22,7 @@
             <input type="hidden" value="{{id}}" name="id">
             <input type="hidden" value="{{token}}" name="token">
             
-            <button class="btn btn-success" type="submit" style="width:60%">Alterar</button>
+            <button class="btn btn-success" type="submit" style="width:60%; margin:10px auto">Alterar</button>
 
             </form>
         </div>
